[package]
name = "wibu-phdr-gap"
version = "0.1.0"
authors = ["Jan-Niklas Burfeind <jan-niklas.burfeind@vorausrobotik.com>", "Lukas Beckmann <lukas.beckmann@vorausrobotik.com>"]
edition = "2024"
description = "The phdr gap guarantees WIBU Systems AxProtector to find enough space to install its tooling."
license = "MIT"
repository = "https://github.com/vorausrobotik/wibu-phdr-gap"

[dependencies]

[dev-dependencies]
elf = "0.7.4"
