[package]
name = "wibu-phdr-gap"
version = "1.0.0-beta.0"
authors = ["Jan-Niklas Burfeind <jan-niklas.burfeind@vorausrobotik.com>", "Lukas Beckmann <lukas.beckmann@vorausrobotik.com>"]
edition = "2024"
description = "The phdr gap guarantees WIBU Systems AxProtector to find enough space to install its tooling."
license = "MIT"
repository = "https://github.com/vorausrobotik/wibu-phdr-gap"
readme = "README.md"
categories = ["development-tools", "rust-patterns", "security", "api-bindings", "science::robotics"]
keywords = ["WIBU", "AxProtector", "placeholder", "PHDR", "binary"]

[dependencies]

[dev-dependencies]
elf = "0.7.4"
